Added anyhow for better error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ bandit = "0.12.4"
 dirs = "4.0.0"
 crossbeam-channel = "0.5.4"
 rust-argon2 = { git = "https://github.com/Ragnaroek/rust-argon2" }
+anyhow = { version = "1.0.70", features = ["backtrace"] }
+
 
 [dev-dependencies]
 difference = "2.0.0"
