--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mithril"
 version = "0.20.0"
 authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
+edition = '2021'
 
 [lib]
 name = "mithril"
@@ -14,7 +15,7 @@ serde_derive = "1.0.137"
 strum = { version = "0.24.0", features = ["derive"] }
 config = "0.13.1"
 log = "0.4.17"
-env_logger = "0.9.0"
+env_logger = "0.10.0"
 num_cpus = "1.13.1"
 bandit = "0.12.4"
 dirs = "4.0.0"
