--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ crossbeam-channel = "0.5.4"
 rust-argon2 = { git = "https://github.com/Ragnaroek/rust-argon2" }
 anyhow = { version = "1.0.70", features = ["backtrace"] }
 toml = "0.7.3"
+thiserror = "1.0.40"
 
 
 [dev-dependencies]
